[gd_scene load_steps=2 format=3 uid="uid://b8q7a6kfi2vwe"]

[ext_resource type="Script" path="res://src/ui/components/mission/MissionSummaryPanel.gd" id="1_script"]

[node name="MissionSummaryPanel" type="PanelContainer"]
theme_type_variation = &"DarkPanel"
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission Complete"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OutcomeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Mission Successful!"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Mission Statistics"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RewardsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RewardsLabel" type="Label" parent="MarginContainer/VBoxContainer/RewardsContainer"]
layout_mode = 2
text = "Rewards"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"] 